tdf#156769 - Escape the question mark in the storage name

Otherwise, an auto-text using the question mark for its shortcut
cannot be inserted.

Change-Id: I369e3d0f2ff82cea2d053896964a5c2c23b8d6f6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161921
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>